# ComfyUI_pixtral_vision

./: README.md  __init__.py  pixtral_vision_node.py  pyproject.toml  requirements.txt
example/: Pixtral - Multi Image Input.json  Pixtral vision.json
web/js/: multiimagesinput.js  preview-text.js
